fix: spacing?

--- a/index.css
+++ b/index.css
@@ -126,4 +126,5 @@ h5 {
 h3 {
   font-weight: heavy;
   margin-bottom: 0;
+  margin-top: 0;
 }
